--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 version: '3.8'
 services:
   db:
-    image: postgres:14.3-alpine
+    image: postgres:15.1-alpine
     restart: always
+    container_name: 'movies-db'
     ports:
       - 5432:5432
     volumes:
