--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/movies
+spring.datasource.url=jdbc:postgresql://localhost:5432/movies?stringtype=unspecified
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.open-in-view = false
+server.port=18081
